# crewai-top3-summarizer

./: README.md  pyproject.toml  requirements.txt
src/top3_summarizer/: crew.py  main.py
src/top3_summarizer/config/: agents.yaml  tasks.yaml
src/top3_summarizer/tools/: sentiment_tool.py
